--- a/lib/l10n2/app_de.arb
+++ b/lib/l10n2/app_de.arb
@@ -354,11 +354,146 @@
     "description": "Titel für den Anspruchsdashboard-Bildschirm"
   },
 
+  "tooltipArrivalAirportQuickClaim": "Ankunftsflughafen für Quick Claim",
+  "@tooltipArrivalAirportQuickClaim": {
+    "description": "Tooltip für das Ankunftsflughafen-Feld im Quick Claim-Bildschirm"
+  },
+
+  "flightCompensationCheckerTitle": "Flugentschädigungs-Prüfer",
+  "@flightCompensationCheckerTitle": {
+    "description": "Titel für den Flugentschädigungs-Prüfer-Bildschirm"
+  },
+
+  "checkEligibilityForEu261": "Prüfen Sie, ob Ihr Flug für eine EU261-Entschädigung in Frage kommt",
+  "@checkEligibilityForEu261": {
+    "description": "Überschriftstext für die EU261-Eignungsprüfung"
+  },
+
+  "flightNumberPlaceholder": "Flugnummer (z.B. LH123)",
+  "@flightNumberPlaceholder": {
+    "description": "Platzhaltertext für das Flugnummer-Eingabefeld"
+  },
+
+  "dateOptionalPlaceholder": "Datum (JJJJ-MM-TT, optional)",
+  "@dateOptionalPlaceholder": {
+    "description": "Platzhaltertext für optionales Datumseingabefeld"
+  },
+
+  "leaveDateEmptyForToday": "Leer lassen für heute",
+  "@leaveDateEmptyForToday": {
+    "description": "Hinweistext für das Datumsfeld"
+  },
+
+  "checkCompensationEligibility": "Entschädigungsberechtigung prüfen",
+  "@checkCompensationEligibility": {
+    "description": "Schaltflächenbeschriftung zur Prüfung der Entschädigungsberechtigung"
+  },
+
+  "pleaseEnterFlightNumber": "Bitte geben Sie eine Flugnummer ein",
+  "@pleaseEnterFlightNumber": {
+    "description": "Validierungsmeldung für leere Flugnummer"
+  },
+
+  "error": "Fehler",
+  "@error": {
+    "description": "Fehlertext für Fehlermeldungen"
+  },
+
+  "flightInfoFormat": "Flug {flightNumber} - {airline}",
+  "@flightInfoFormat": {
+    "description": "Format für die Anzeige von Fluginformationen mit Nummer und Fluggesellschaft",
+    "placeholders": {
+      "flightNumber": {
+        "type": "String",
+        "example": "LH123"
+      },
+      "airline": {
+        "type": "String",
+        "example": "Lufthansa"
+      }
+    }
+  },
+
+  "status": "Status",
+  "@status": {
+    "description": "Status-Label"
+  },
+
+  "from": "Von",
+  "@from": {
+    "description": "Von-Label für Abflughafen"
+  },
+
+  "to": "Nach",
+  "@to": {
+    "description": "Nach-Label für Ankunftsflughafen"
+  },
+
+  "delay": "Verspätung",
+  "@delay": {
+    "description": "Verspätungs-Label"
+  },
+
+  "minutesFormat": "{minutes} Minuten",
+  "@minutesFormat": {
+    "description": "Format für die Anzeige von Minuten",
+    "placeholders": {
+      "minutes": {
+        "type": "int",
+        "example": "45"
+      }
+    }
+  },
+
+  "unknown": "Unbekannt",
+  "@unknown": {
+    "description": "Text für unbekannte Werte"
+  },
+
+  "flightEligibleForCompensation": "Ihr Flug hat Anspruch auf Entschädigung!",
+  "@flightEligibleForCompensation": {
+    "description": "Meldung, die angezeigt wird, wenn der Flug für eine Entschädigung in Frage kommt"
+  },
+
+  "flightNotEligibleForCompensation": "Ihr Flug hat keinen Anspruch auf Entschädigung.",
+  "@flightNotEligibleForCompensation": {
+    "description": "Meldung, die angezeigt wird, wenn der Flug nicht für eine Entschädigung in Frage kommt"
+  },
+
+  "potentialCompensation": "Mögliche Entschädigung:",
+  "@potentialCompensation": {
+    "description": "Bezeichnung für den potenziellen Entschädigungsbetrag"
+  },
+
+  "contactAirlineForClaim": "Kontaktieren Sie die Fluggesellschaft, um Ihre Entschädigung gemäß EU-Verordnung 261/2004 zu beantragen.",
+  "@contactAirlineForClaim": {
+    "description": "Anweisung zur Beantragung einer Entschädigung"
+  },
+
+  "reasonPrefix": "Grund: ",
+  "@reasonPrefix": {
+    "description": "Präfix für die Anzeige des Grundes für die Nichtberechtigung"
+  },
+
+  "delayLessThan3Hours": "Flugverspätung ist weniger als 3 Stunden",
+  "@delayLessThan3Hours": {
+    "description": "Grund für Nichtberechtigung aufgrund kurzer Verzögerung"
+  },
+
+  "notUnderEuJurisdiction": "Flug unterliegt nicht der EU-Rechtsprechung",
+  "@notUnderEuJurisdiction": {
+    "description": "Grund für Nichtberechtigung aufgrund der Rechtsprechung"
+  },
+
+  "unknownReason": "Unbekannter Grund",
+  "@unknownReason": {
+    "description": "Standardgrund, wenn kein spezifischer Grund verfügbar ist"
+  },
+
   "refreshDashboard": "Dashboard aktualisieren",
   "@refreshDashboard": {
     "description": "Tooltip für die Aktualisierungsschaltfläche auf dem Dashboard"
   },
-
   "claimsSummary": "Anspruchsübersicht",
   "@claimsSummary": {
     "description": "Titel für den Abschnitt Anspruchsübersicht"
@@ -663,7 +798,7 @@
   
   "divertedReason": "Flug wurde zu einem anderen Flughafen umgeleitet",
   "@divertedReason": {
-    "description": "Grund für umgeleitete Flüge"
+    "description": "Grund für Umleitung eines Fluges"
   },
   
   "cancelledReason": "Flug wurde storniert",
@@ -674,5 +809,410 @@
   "checkCompensationEligibility": "Entschädigungsberechtigung prüfen",
   "@checkCompensationEligibility": {
     "description": "Text des Buttons zur Überprüfung der Entschädigungsberechtigung"
+  },
+
+  "copiedToClipboard": "In die Zwischenablage kopiert",
+  "@copiedToClipboard": {
+    "description": "Meldung, wenn etwas in die Zwischenablage kopiert wurde"
+  },
+
+  "submitNewClaim": "Neuen Anspruch einreichen",
+  "@submitNewClaim": {
+    "description": "Schaltflächen-Text zum Einreichen eines neuen Anspruchs"
+  },
+
+  "reasonForClaim": "Grund für den Anspruch",
+  "@reasonForClaim": {
+    "description": "Beschriftung für das Feld zur Angabe des Grundes für den Anspruch"
+  },
+
+  "flightDateHint": "Flugdatum (JJJJ-MM-TT)",
+  "@flightDateHint": {
+    "description": "Hinweis für das Flugdatum-Eingabefeld"
+  },
+
+  "continueToAttachments": "Weiter zu Anlagen",
+  "@continueToAttachments": {
+    "description": "Schaltflächen-Text, um zum Anlagen-Bildschirm zu navigieren"
+  },
+
+  "pleaseEnterArrivalAirport": "Bitte geben Sie einen Ankunftsflughafen ein",
+  "@pleaseEnterArrivalAirport": {
+    "description": "Validierungsmeldung für leeren Ankunftsflughafen"
+  },
+
+  "pleaseEnterReason": "Bitte geben Sie einen Grund ein",
+  "@pleaseEnterReason": {
+    "description": "Validierungsmeldung für leeren Grund"
+  },
+
+  "pleaseSelectFlightDate": "Bitte wählen Sie ein Flugdatum",
+  "@pleaseSelectFlightDate": {
+    "description": "Validierungsmeldung für nicht ausgewähltes Flugdatum"
+  },
+
+  "claimDetails": "Anspruchsdetails",
+  "@claimDetails": {
+    "description": "Überschrift für den Bereich mit Anspruchsdetails"
+  },
+
+  "refresh": "Aktualisieren",
+  "@refresh": {
+    "description": "Text für die Aktualisierungsschaltfläche"
+  },
+
+  "errorLoadingClaim": "Fehler beim Laden des Anspruchs",
+  "@errorLoadingClaim": {
+    "description": "Fehlermeldung beim Laden der Anspruchsdaten"
+  },
+
+  "unknownError": "Unbekannter Fehler",
+  "@unknownError": {
+    "description": "Meldung für einen unbekannten Fehler"
+  },
+
+  "networkError": "Netzwerkfehler",
+  "@networkError": {
+    "description": "Meldung für Netzwerkfehler"
+  },
+
+  "generalError": "Allgemeiner Fehler",
+  "@generalError": {
+    "description": "Meldung für einen allgemeinen Fehler"
+  },
+
+  "loginRequiredForClaim": "Anmeldung erforderlich, um einen Anspruch einzureichen",
+  "@loginRequiredForClaim": {
+    "description": "Meldung, dass eine Anmeldung erforderlich ist, um einen Anspruch einzureichen"
+  },
+
+  "quickClaimTitle": "Schnellanspruch",
+  "@quickClaimTitle": {
+    "description": "Titel für den Schnellanspruchsbildschirm"
+  },
+
+  "quickClaimInfoBanner": "Für EU-berechtigte Flüge. Füllen Sie grundlegende Informationen für eine schnelle Vorabprüfung aus.",
+  "@quickClaimInfoBanner": {
+    "description": "Informationsbanner für den Schnellanspruch-Bildschirm"
+  },
+
+  "flightNumberHintQuickClaim": "z.B. LH123",
+  "@flightNumberHintQuickClaim": {
+    "description": "Hinweis für das Flugnummernfeld im Schnellanspruch"
+  },
+
+  "departureAirportHintQuickClaim": "z.B. FRA",
+  "@departureAirportHintQuickClaim": {
+    "description": "Hinweis für das Abflughafen-Feld im Schnellanspruch"
+  },
+
+  "arrivalAirportHintQuickClaim": "z.B. LHR",
+  "@arrivalAirportHintQuickClaim": {
+    "description": "Hinweis für das Ankunftsflughafen-Feld im Schnellanspruch"
+  },
+
+  "reasonForClaimLabel": "Grund für den Anspruch",
+  "@reasonForClaimLabel": {
+    "description": "Beschriftung für das Grund-Feld im Anspruchsformular"
+  },
+
+  "reasonForClaimHint": "z.B. Verspätung, Annullierung",
+  "@reasonForClaimHint": {
+    "description": "Hinweis für das Grund-Feld im Anspruchsformular"
+  },
+
+  "compensationAmountOptionalLabel": "Entschädigungsbetrag (optional)",
+  "@compensationAmountOptionalLabel": {
+    "description": "Beschriftung für optionales Entschädigungsbetrags-Feld"
+  },
+
+  "compensationAmountHint": "z.B. 250€",
+  "@compensationAmountHint": {
+    "description": "Hinweis für das Entschädigungsbetrags-Feld"
+  },
+
+  "euWideCompensationTitle": "EU-weite Entschädigungen",
+  "@euWideCompensationTitle": {
+    "description": "Titel für den Bereich mit EU-weiten Entschädigungsinformationen"
+  },
+
+  "scheduledLabel": "Geplant",
+  "@scheduledLabel": {
+    "description": "Beschriftung für geplante Zeit/Datum"
+  },
+
+  "statusLabelEuList": "Status",
+  "@statusLabelEuList": {
+    "description": "Statusbeschriftung für EU-Flugliste"
+  },
+
+  "potentialCompensationLabel": "Potenzielle Entschädigung",
+  "@potentialCompensationLabel": {
+    "description": "Beschriftung für den potenziellen Entschädigungsbetrag"
+  },
+
+  "prefillCompensationFormButton": "Entschädigungsformular ausfüllen",
+  "@prefillCompensationFormButton": {
+    "description": "Text für die Schaltfläche zum Ausfüllen des Entschädigungsformulars"
+  },
+
+  "claimsTabActive": "Aktiv",
+  "@claimsTabActive": {
+    "description": "Registerkartenbeschriftung für aktive Ansprüche"
+  },
+
+  "claimsTabActionRequired": "Maßnahme erforderlich",
+  "@claimsTabActionRequired": {
+    "description": "Registerkartenbeschriftung für Ansprüche, die Maßnahmen erfordern"
+  },
+
+  "claimsTabCompleted": "Abgeschlossen",
+  "@claimsTabCompleted": {
+    "description": "Registerkartenbeschriftung für abgeschlossene Ansprüche"
+  },
+
+  "dialogTitleSuccess": "Erfolg",
+  "@dialogTitleSuccess": {
+    "description": "Dialogtitel für Erfolgsmeldungen"
+  },
+
+  "dialogContentClaimSubmitted": "Ihr Anspruch wurde erfolgreich eingereicht.",
+  "@dialogContentClaimSubmitted": {
+    "description": "Dialoginhalt für erfolgreiche Anspruchseinreichung"
+  },
+
+  "dialogButtonOK": "OK",
+  "@dialogButtonOK": {
+    "description": "Dialogschaltflächentext für OK-Aktion"
+  },
+
+  "documentManagementTitle": "Dokumentenverwaltung",
+  "@documentManagementTitle": {
+    "description": "Titel für den Dokumentenverwaltungsbildschirm"
+  },
+
+  "documentsForFlightTitle": "Dokumente für Flug",
+  "@documentsForFlightTitle": {
+    "description": "Titel für den Bereich mit Flugdokumenten"
+  },
+
+  "errorLoadingDocuments": "Fehler beim Laden der Dokumente",
+  "@errorLoadingDocuments": {
+    "description": "Fehlermeldung beim Laden von Dokumenten"
+  },
+
+  "addDocumentTooltip": "Dokument hinzufügen",
+  "@addDocumentTooltip": {
+    "description": "Tooltip für die Schaltfläche zum Hinzufügen eines Dokuments"
+  },
+
+  "deleteDocumentTitle": "Dokument löschen",
+  "@deleteDocumentTitle": {
+    "description": "Titel für den Löschen-Dialog eines Dokuments"
+  },
+
+  "deleteDocumentMessage": "Sind Sie sicher, dass Sie dieses Dokument löschen möchten?",
+  "@deleteDocumentMessage": {
+    "description": "Bestätigungsmeldung für das Löschen eines Dokuments"
+  },
+
+  "delete": "Löschen",
+  "@delete": {
+    "description": "Text für die Löschen-Schaltfläche"
+  },
+
+  "errorMustBeLoggedIn": "Sie müssen angemeldet sein, um diese Aktion durchzuführen",
+  "@errorMustBeLoggedIn": {
+    "description": "Fehlermeldung, wenn der Benutzer nicht angemeldet ist"
+  },
+
+  "errorFailedToSubmitClaim": "Fehler beim Einreichen des Anspruchs",
+  "@errorFailedToSubmitClaim": {
+    "description": "Fehlermeldung beim Einreichen eines Anspruchs"
+  },
+
+  "dialogTitleError": "Fehler",
+  "@dialogTitleError": {
+    "description": "Dialogtitel für Fehlermeldungen"
+  },
+
+  "validatorFlightNumberRequired": "Flugnummer ist erforderlich",
+  "@validatorFlightNumberRequired": {
+    "description": "Validierungsmeldung für erforderliche Flugnummer"
+  },
+
+  "tooltipFlightNumberQuickClaim": "Geben Sie die Flugnummer ein, z.B. LH123",
+  "@tooltipFlightNumberQuickClaim": {
+    "description": "Tooltip für das Flugnummernfeld im Schnellanspruch"
+  },
+
+  "tooltipFlightDateQuickClaim": "Wählen Sie das Datum Ihres Fluges",
+  "@tooltipFlightDateQuickClaim": {
+    "description": "Tooltip für das Datumsfeld im Schnellanspruch"
+  },
+
+  "validatorDepartureAirportRequired": "Abflughafen ist erforderlich",
+  "@validatorDepartureAirportRequired": {
+    "description": "Validierungsmeldung für erforderlichen Abflughafen"
+  },
+
+  "tooltipDepartureAirportQuickClaim": "Geben Sie den 3-stelligen IATA-Code für den Abflughafen ein",
+  "@tooltipDepartureAirportQuickClaim": {
+    "description": "Tooltip für das Abflughafen-Feld im Schnellanspruch"
+  },
+
+  "validatorArrivalAirportRequired": "Ankunftsflughafen ist erforderlich",
+  "@validatorArrivalAirportRequired": {
+    "description": "Validierungsmeldung für erforderlichen Ankunftsflughafen"
+  },
+
+  "hintTextReasonQuickClaim": "z.B. Verspätung über 3 Stunden",
+  "@hintTextReasonQuickClaim": {
+    "description": "Hinweistext für das Grund-Feld im Schnellanspruch"
+  },
+
+  "validatorReasonRequired": "Grund ist erforderlich",
+  "@validatorReasonRequired": {
+    "description": "Validierungsmeldung für erforderlichen Grund"
+  },
+
+  "tooltipReasonQuickClaim": "Beschreiben Sie kurz, warum Sie einen Anspruch einreichen",
+  "@tooltipReasonQuickClaim": {
+    "description": "Tooltip für das Grund-Feld im Schnellanspruch"
+  },
+
+  "tooltipCompensationAmountQuickClaim": "Geben Sie den Betrag ein, wenn Sie wissen, wofür Sie berechtigt sind",
+  "@tooltipCompensationAmountQuickClaim": {
+    "description": "Tooltip für das Entschädigungsbetrags-Feld im Schnellanspruch"
+  },
+
+  "tipsAndRemindersTitle": "Tipps & Erinnerungen",
+  "@tipsAndRemindersTitle": {
+    "description": "Titel für den Abschnitt mit Tipps und Erinnerungen"
+  },
+
+  "tipSecureData": "Wir schützen Ihre Daten mit Bankstandard-Verschlüsselung",
+  "@tipSecureData": {
+    "description": "Sicherheitshinweis über Datenverschlüsselung"
+  },
+
+  "continueToReview": "Weiter zur Überprüfung",
+  "@continueToReview": {
+    "description": "Text für die Schaltfläche zur Überprüfung"
+  },
+
+  "previewEmail": "E-Mail-Vorschau",
+  "@previewEmail": {
+    "description": "Titel für die E-Mail-Vorschau"
+  },
+
+  "pdfPreviewMessage": "PDF-Vorschau",
+  "@pdfPreviewMessage": {
+    "description": "Meldung für PDF-Vorschau"
+  },
+
+  "downloadPdf": "PDF herunterladen",
+  "@downloadPdf": {
+    "description": "Text für die Schaltfläche zum Herunterladen des PDFs"
+  },
+
+  "filePreviewNotAvailable": "Datevorschau nicht verfügbar",
+  "@filePreviewNotAvailable": {
+    "description": "Meldung, wenn keine Datevorschau verfügbar ist"
+  },
+
+  "deleteDocument": "Dokument löschen",
+  "@deleteDocument": {
+    "description": "Text für die Schaltfläche zum Löschen eines Dokuments"
+  },
+
+  "deleteDocumentConfirmation": "Sind Sie sicher, dass Sie dieses Dokument löschen möchten?",
+  "@deleteDocumentConfirmation": {
+    "description": "Bestätigungsmeldung für das Löschen eines Dokuments"
+  },
+
+  "documentDeletedSuccess": "Dokument erfolgreich gelöscht",
+  "@documentDeletedSuccess": {
+    "description": "Erfolgsmeldung nach dem Löschen eines Dokuments"
+  },
+
+  "documentDeleteFailed": "Dokument konnte nicht gelöscht werden",
+  "@documentDeleteFailed": {
+    "description": "Fehlermeldung, wenn das Löschen eines Dokuments fehlgeschlagen ist"
+  },
+
+  "reviewYourClaim": "Prüfen Sie Ihren Anspruch",
+  "@reviewYourClaim": {
+    "description": "Titel für den Bildschirm zur Überprüfung des Anspruchs"
+  },
+
+  "reviewClaimDetails": "Prüfen Sie die Anspruchsdetails",
+  "@reviewClaimDetails": {
+    "description": "Anweisung zur Überprüfung der Anspruchsdetails"
+  },
+
+  "attachments": "Anlagen",
+  "@attachments": {
+    "description": "Beschriftung für den Anlagen-Abschnitt"
+  },
+
+  "proceedToConfirmation": "Weiter zur Bestätigung",
+  "@proceedToConfirmation": {
+    "description": "Text für die Schaltfläche zum Fortfahren zur Bestätigung"
+  },
+
+  "confirmAndSend": "Bestätigen und senden",
+  "@confirmAndSend": {
+    "description": "Text für die Schaltfläche zum Bestätigen und Senden"
+  },
+
+  "errorLoadingEmailDetails": "Fehler beim Laden der E-Mail-Details",
+  "@errorLoadingEmailDetails": {
+    "description": "Fehlermeldung beim Laden von E-Mail-Details"
+  },
+
+  "noEmailInfo": "Keine E-Mail-Informationen verfügbar",
+  "@noEmailInfo": {
+    "description": "Meldung, wenn keine E-Mail-Informationen verfügbar sind"
+  },
+
+  "finalConfirmation": "Abschließende Bestätigung",
+  "@finalConfirmation": {
+    "description": "Titel für den Bildschirm zur abschließenden Bestätigung"
+  },
+
+  "claimWillBeSentTo": "Ihr Anspruch wird gesendet an",
+  "@claimWillBeSentTo": {
+    "description": "Meldung, die anzeigt, wohin der Anspruch gesendet wird"
+  },
+
+  "copyToYourEmail": "Kopie an Ihre E-Mail",
+  "@copyToYourEmail": {
+    "description": "Beschriftung für die Option, eine Kopie an die eigene E-Mail zu senden"
+  },
+
+  "confirmAndSendEmail": "Bestätigen und E-Mail senden",
+  "@confirmAndSendEmail": {
+    "description": "Text für die Schaltfläche zum Bestätigen und Senden der E-Mail"
+  },
+
+  "reviewAndConfirm": "Überprüfen und bestätigen",
+  "@reviewAndConfirm": {
+    "description": "Anweisung zum Überprüfen und Bestätigen"
+  },
+
+  "pleaseConfirmDetails": "Bitte bestätigen Sie, dass alle Details korrekt sind",
+  "@pleaseConfirmDetails": {
+    "description": "Anweisung zur Bestätigung der Korrektheit der Details"
+  },
+
+  "emailAppOpenedMessage": "E-Mail-App geöffnet",
+  "@emailAppOpenedMessage": {
+    "description": "Meldung, wenn die E-Mail-App geöffnet wurde"
+  },
+
+  "emailAppErrorMessage": "Fehler beim Öffnen der E-Mail-App",
+  "@emailAppErrorMessage": {
+    "description": "Fehlermeldung, wenn die E-Mail-App nicht geöffnet werden konnte"
   }
 }
